fixed minor calendar title alignment issue

--- a/src/scss/plugins/calendar.scss
+++ b/src/scss/plugins/calendar.scss
@@ -13,7 +13,7 @@ body {
 
 
 		.title {
-			padding-left: 10px;
+			padding-left: 8px;
 			font-size: 1rem;
 			flex-grow: 4;
 			line-height: 1;
